Revision history for Business::Shipping
=======================================


1.50  CVS
  
  Compatibility
    - Clone module now required (for Tracking).
    - Class::MethodMaker 2.02 now required.  CPAN installation instructions:
      perl -MCPAN -e 'install Class::MethodMaker::Engine'
      Updated because the new version has sugary syntax.
    - Log::Log4perl now required (for debug/error handling).
    - event_handlers() depreciated (use config/log4perl.conf instead).
    - $self->error() changed to $self->user_error() 
    - Multi-package API un-supported.
        
  Tracking
    - Rusty Conover <rconover@infogears.com> contributed the following:
        Tracking
        Tracking::USPS
        Tracking::UPS
        
  General
    - Changed to dual GPL/Artistic License.
    - Changed hosting from kavod.com to sf.net.
    - Code cleanup all over the place.
    - Logging system added, wrapper for Log4perl.
    - Major documentation updates.
    - Change tabs to four spaces
    - Developed ClassAttribs and ClassInfo packages for extracting meta-data
      from the classes themselves (uses static class methods).  Used here to
      implement "Required Options", "Optional Options", and "Unique Options".
    - Upgrade to Class::MethodMaker 2.0 syntax.  
      Business::Shipping::CustomMethodMaker removed.
    - Added minimal documentation to most of the modules.
    - Shipment: default_package function now a little smarter with regard to
      the auto-creation of a default package if one does not exist.
    - LWP::UserAgent and HTTP::Response objects now created on-the-fly.
    - Many other misc. changes.
    - New tests.
    - Remove documentation for multi-package API.  Unsupported.
    - Fixed: Error on missing arguments isn't working very well (user_id, 
      password)
   
  Offline::UPS
    - Bug fixed: Zip+4 not handled correctly (should drop the four).
    - Update fuel surcharge to 6.0%.
    - Minor validity changes: