@@ -838,6 +838,11 @@ service=XDM	to_country=Malaysia
 service=XDM	to_country=Israel
 service=XPD	to_country=Israel
 service=XPD	to_country=Cyprus
+service=XPD	to_country=United Arab Emirates
+service=XPD	to_country=Saudi Arabia
+service=XPD	to_country=St. Lucia
+service=XPD	to_country=Jordan
+service=XPD	to_country=Israel
 service=GNDRES	to_country=!United States	reason=UPS Ground Residential cannot be used to ship to Canada.  Try UPS Standard (UPSSTD), WorldWide Expedited (XPD), or another international service.
 service=XPR	to_country=United States        reason=WorldWide Express not available for domestic shipping.
 EOF
