@@ -1,6 +1,6 @@
 # config/log4perl.conf - Log::Log4perl configuration file for Business::Shipping
 #
-# $Id: log4perl.conf,v 1.3 2004/05/07 05:29:37 danb Exp $
+# $Id: log4perl.conf,v 1.4 2004/05/12 05:13:13 danb Exp $
 # 
 
 #
@@ -16,11 +16,11 @@ log_dir         = /var/perl/Business-Shipping/log
 
 # Normal
 
-#log4perl.category.Business::Shipping = WARN, ${handlers}
+log4perl.category.Business::Shipping = WARN, ${handlers}
 
 # Verbose
 
-log4perl.category.Business::Shipping = DEBUG, ${handlers}
+#log4perl.category.Business::Shipping = DEBUG, ${handlers}
 
 # Very verbose.
 
