@@ -2,6 +2,7 @@
 
 use strict;
 use warnings;
+use diagnostics;
 
 use Business::Shipping;
 
@@ -12,13 +13,12 @@ $rate_request->submit(
         from_state   => 'WA',
         from_city    => 'Vancouver',
         from_zip     => '98682',
-
-        to_country   => 'XS',
-        #to_city      => 'Abu Dhabi',
-        to_zip =>               '564',
-
-        service      => 'XDM',
-        weight       => '2',
+        
+        to_country   => 'FX',
+        to_zip       => '75005',
+        
+        service =>              'XPD',
+        weight =>               '55',
 ) or die $rate_request->user_error();
 
 print "offline = " . $rate_request->total_charges() . "\n";
